# pygame-orso-wasm

./: .gitignore  README.md  index.html  main.py  pyproject.toml
.github/workflows/: pygbag.yml
